<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkPollo"
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:text="@string/check_Pollo"
        app:layout_constraintBottom_toTopOf="@+id/checkOtro"
        app:layout_constraintStart_toEndOf="@+id/checkPerro"
        app:layout_constraintTop_toTopOf="@+id/checkPerro" />

    <CheckBox
        android:id="@+id/checkOtro"
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:text="@string/check_Otro"
        app:layout_constraintBottom_toBottomOf="@+id/checkPato"
        app:layout_constraintStart_toEndOf="@+id/checkPato"
        app:layout_constraintTop_toBottomOf="@+id/checkGato" />

    <CheckBox
        android:id="@+id/checkGato"
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:layout_marginTop="10dp"
        android:text="@string/check_Gato"
        app:layout_constraintStart_toStartOf="@+id/txtMascota"
        app:layout_constraintTop_toBottomOf="@+id/txtMascota" />

    <CheckBox
        android:id="@+id/checkPerro"
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:text="@string/check_Perro"
        app:layout_constraintBottom_toTopOf="@+id/checkPato"
        app:layout_constraintStart_toEndOf="@+id/checkGato"
        app:layout_constraintTop_toTopOf="@+id/checkGato" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/txt_titulo"
        android:textColor="#0762AA"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/txt_Apnom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="#AD03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Apnom"
        android:textColor="#0B62A6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#AD03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Correo"
        android:textColor="#0B62A6"
        app:layout_constraintStart_toStartOf="@+id/txt_Apnom"
        app:layout_constraintTop_toBottomOf="@+id/txt_Apnom" />

    <TextView
        android:id="@+id/txtClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#AD03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Clave"
        android:textColor="#0B62A6"
        app:layout_constraintStart_toStartOf="@+id/txtCorreo"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <TextView
        android:id="@+id/txtTelef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#AD03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Telef"
        android:textColor="#0B62A6"
        app:layout_constraintStart_toStartOf="@+id/txtClave"
        app:layout_constraintTop_toBottomOf="@+id/txtClave" />

    <TextView
        android:id="@+id/txtNaci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#AD03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Naci"
        android:textColor="#0B62A6"
        app:layout_constraintStart_toStartOf="@+id/txtTelef"
        app:layout_constraintTop_toBottomOf="@+id/txtTelef" />

    <TextView
        android:id="@+id/txtHnaci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#AD03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Hnaci"
        android:textColor="#0B62A6"
        app:layout_constraintStart_toStartOf="@+id/txtNaci"
        app:layout_constraintTop_toBottomOf="@+id/txtNaci" />

    <TextView
        android:id="@+id/txtZona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#AD03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Zona"
        android:textColor="#0B62A6"
        app:layout_constraintStart_toStartOf="@+id/txtHnaci"
        app:layout_constraintTop_toBottomOf="@+id/txtHnaci" />

    <TextView
        android:id="@+id/txtPer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#AD03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Per"
        android:textColor="#0B62A6"
        app:layout_constraintStart_toStartOf="@+id/txtZona"
        app:layout_constraintTop_toBottomOf="@+id/txtZona" />

    <TextView
        android:id="@+id/txtIng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#AD03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Ing"
        android:textColor="#0B62A6"
        app:layout_constraintStart_toStartOf="@+id/txtPer"
        app:layout_constraintTop_toBottomOf="@+id/txtPer" />

    <TextView
        android:id="@+id/txtOp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#AD03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Op"
        android:textColor="#0B62A6"
        app:layout_constraintStart_toStartOf="@+id/txtIng"
        app:layout_constraintTop_toBottomOf="@+id/txtIng" />

    <TextView
        android:id="@+id/txtMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#AD03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Mascota"
        android:textColor="#0B62A6"
        app:layout_constraintStart_toStartOf="@+id/txtOp"
        app:layout_constraintTop_toBottomOf="@+id/txtOp" />

    <EditText
        android:id="@+id/respApnom"
        android:layout_width="202dp"
        android:layout_height="34dp"
        android:layout_marginEnd="20dp"
        android:background="#0003A9F4"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Resp_Apnom"
        app:layout_constraintBottom_toBottomOf="@+id/txt_Apnom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_Apnom" />

    <EditText
        android:id="@+id/respCorreo"
        android:layout_width="201dp"
        android:layout_height="27dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/resp_Correo"
        app:layout_constraintBottom_toBottomOf="@+id/txtCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCorreo" />

    <EditText
        android:id="@+id/respClave"
        android:layout_width="199dp"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/resp_Clave"
        app:layout_constraintBottom_toBottomOf="@+id/txtClave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtClave" />

    <EditText
        android:id="@+id/respTelef"
        android:layout_width="201dp"
        android:layout_height="33dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/resp_Telef"
        app:layout_constraintBottom_toBottomOf="@+id/txtTelef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTelef" />

    <EditText
        android:id="@+id/respFecha"
        android:layout_width="201dp"
        android:layout_height="29dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/resp_Fecha"
        app:layout_constraintBottom_toBottomOf="@+id/txtNaci"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtNaci" />

    <EditText
        android:id="@+id/respHnaci"
        android:layout_width="199dp"
        android:layout_height="37dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/resp_Hnaci"
        app:layout_constraintBottom_toBottomOf="@+id/txtHnaci"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtHnaci" />

    <RadioGroup
        android:id="@+id/buttonGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtZona"
        app:layout_constraintStart_toEndOf="@+id/txtZona"
        app:layout_constraintTop_toTopOf="@+id/txtZona">

        <RadioButton
            android:id="@+id/radioUrbano"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/radio_Urbano" />

        <RadioButton
            android:id="@+id/radioRural"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/radio_Rural" />
    </RadioGroup>

    <EditText
        android:id="@+id/respPersonas"
        android:layout_width="76dp"
        android:layout_height="31dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/resp_Personas"
        app:layout_constraintBottom_toBottomOf="@+id/txtPer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPer" />

    <EditText
        android:id="@+id/respIngreso"
        android:layout_width="143dp"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/resp_Ingreso"
        app:layout_constraintBottom_toBottomOf="@+id/txtIng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtIng"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/respOpinion"
        android:layout_width="338dp"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/resp_Opinion"
        app:layout_constraintEnd_toEndOf="@+id/txtOp"
        app:layout_constraintStart_toStartOf="@+id/txtOp"
        app:layout_constraintTop_toBottomOf="@+id/txtOp" />

    <CheckBox
        android:id="@+id/checkPato"
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:text="@string/check_Pato"
        app:layout_constraintStart_toStartOf="@+id/checkGato"
        app:layout_constraintTop_toBottomOf="@+id/checkGato" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:layout_marginTop="90dp"
        android:background="#FFEB3B"
        android:backgroundTint="#FFEB3B"
        android:backgroundTintMode="add"
        android:drawableLeft="@drawable/baseline_send_24"
        android:drawableTint="#EDE1E1"
        android:foregroundTint="#F6EEEE"
        android:text="@string/button_Enviar"
        android:textColorHighlight="#ECDCDC"
        android:textColorHint="#E6DDDD"
        android:textColorLink="#553737"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respOpinion"
        app:rippleColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>